package Practico_V;

public enum EstadoTicket {
    ABIERTO,
    EN_PROCESO,
    CERRADO
}
